--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,13 @@ dependencies = [
     "pillow (>=12.1.0,<13.0.0)",
     "fastapi[standard] (>=0.115.0,<0.124.0)",
     "uvicorn (>=0.40.0,<0.41.0)",
-    "mcp (>=1.25.0,<2.0.0)"
+    "mcp (>=1.25.0,<2.0.0)",
+    "matplotlib (>=3.10.8,<4.0.0)",
+    "pandas (>=3.0.0,<4.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "kagglehub (>=0.4.2,<0.5.0)",
+    "keras (>=3.13.2,<4.0.0)",
+    "scipy (>=1.17.0,<2.0.0)"
 ]
 
 
